[tool.poetry]
name = "shomidacode"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.3"
matplotlib = "^3.7.2"
scikit-learn = "^1.3.0"
plotly = "^5.16.1"
human-learn = "^0.3.4"
scikit-learn-extra = "^0.3.0"
seaborn = "^0.12.2"
pdfkit = "^1.0.0"
tiktoken = "^0.5.1"
spacy = "^3.6.1"
javalang = "^0.13.0"
python-dotenv = "^1.0.0"
cohere = "^4.27"
openai = "^0.28.1"
sentence-models = "^0.1.1"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
